# NS_LLM_Library

./: .env.example  .gitignore  README.md  anthropic_provider.py  openai_provider.py  pyproject.toml  testLLM.py  testModelli.txt
.github/workflows/: test.yml
docs/: Anthropic_LLM_Library_Documentation.docx  Ollama_LLM_Library_Documentation.docx  OpenAI_LLM_Library_Documentation.docx  OpenRouter_LLM_Library_Documentation.docx  Refactoring_Libreria_LLM_Documentation.docx  Router_LLM_Library_Documentation.docx  Together_LLM_Library_Documentation.docx
docs/embedding/: OpenRouter_Embedding_LLM_Library_Documentation.docx  Router_Embedding_LLM_Library_Documentation.docx  TogetherAI_Embedding_LLM_Library_Documentation.docx
docs/inference/: Anthropic_LLM_Library_Documentation.docx
docs/test/: Unit_Testing_LLM_Library_Documentation.docx
examples/: embedding_main.py  main.py
ns_llm/: __init__.py
ns_llm/embedding/: __init__.py  client.py
ns_llm/inference/: __init__.py  client.py
ns_llm/reranking/: __init__.py  client.py
ns_llm/structured/: __init__.py  client.py  parser.py  schema.py
ns_llm/tokenizer/: __init__.py  client.py
providers/: openai_provider.py
tests/: conftest.py  test_anthropic.py  test_ollama.py  test_openai.py  test_openrouter.py  test_openrouter_embedding.py  test_router.py  test_router_embedding.py  test_together.py  test_together_embedding.py
tests/embedding/: test_together.py
tests/inference/: test_openai.py  test_router.py  test_together.py
tests/structured/: test_anthropic.py  test_ollama.py  test_openai.py  test_openrouter.py  (+4 more)
(+22 files in other folders)
