[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ns-llm"
version = "1.0.0"
description = "Libreria Python multi-provider per l'invocazione di modelli LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "anthropic",
    "together",
    "ollama",
    "openrouter",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
]