[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ns-llm"
version = "1.0.0"
description = "Libreria Python multi-provider per l'invocazione di modelli LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.97.0",
    "anthropic>=0.50.0",
    "together>=1.5.21",
    "ollama>=0.5.1",
    "openrouter>=0.9.1",
    "cohere>=5.13.0",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
]
